Test if push works

--- a/Route.ipynb
+++ b/Route.ipynb
@@ -349,6 +349,17 @@
     "# show\n",
     "trips_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "801246be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test of push werkt\n",
+    "print(\"test\")"
+   ]
   }
  ],
  "metadata": {
