--- a/StationCoverageAccesibility.ipynb
+++ b/StationCoverageAccesibility.ipynb
@@ -99,34 +99,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d49a012c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "belgian_stations = stations[stations['country-code'] == 'be']\n",
+    "belgian_stations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ecf81bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = belgian_stations.merge(facilities[['zip', 'name']], on='name', how='left')\n",
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "1b1ee8af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "station_counts = merged_df['zip'].value_counts().reset_index()\n",
+    "station_counts.columns = ['zip', 'num_stations']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "537d8b84",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "station_counts['highlight'] = station_counts['num_stations'].apply(lambda x: 'Multiple' if x > 1 else 'Single')\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "87bef4a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f76514cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "city\n",
+      "Brussel                 16\n",
+      "Antwerpen                7\n",
+      "Erquelinnes              5\n",
+      "Liege                    4\n",
+      "Court-Saint-Etienne      3\n",
+      "                        ..\n",
+      "Berlaar                  2\n",
+      "Balegem - Oosterzele     2\n",
+      "Vorst                    2\n",
+      "Aarschot                 2\n",
+      "Arlon                    2\n",
+      "Name: count, Length: 66, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "cities_multiple = facilities['city'].value_counts()\n",
+    "cities_multiple = cities_multiple[cities_multiple > 1]\n",
+    "print(cities_multiple)"
+   ]
   },
   {
    "cell_type": "markdown",
